cmd/oci-source/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oci-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host:
    http:
      paths:
        - path: /oci
          pathType: Prefix
          backend:
            service:
              name: loki-loki-distributed-gateway
              port:
                number: 80
